Disable GDR/RDMA support in Libfabric from plugin.
Also force eager.

--- a/tests/functional/Makefile.am
+++ b/tests/functional/Makefile.am
@@ -25,4 +25,4 @@ cuda_check_SOURCES = cuda_check.c
 # Override the LDADD for this check to avoid the -lcudart used by the
 # other tests, since the purpose of this test is to make sure we
 # didn't leak direct cuda dependencies into the plugin.
-cuda_check_LDADD = $(top_builddir)/src/libnccl-net.la
+# cuda_check_LDADD = $(top_builddir)/src/libnccl-net.la
