Feature: ep address hash list
Maintains a list of endpoints, each with a HashSet of addresses the
endpoint has an open connection to (addresses provided by caller).

This structure will allow a feature to limit endpoints to only have one
active connection to a src endpoint, creating new endpoints as
necessary. The next commit will add code to RDMA protocol to use this
data structure.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ tests/unit/scheduler
 tests/unit/idpool
 tests/unit/show_tuner_decisions
 tests/unit/show_tuner_costs
+tests/unit/ep_addr_list
 
 # http://www.gnu.org/software/automake
 .deps/
