--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -45,4 +45,7 @@ noinst_HEADERS = \
 	nccl-headers/nvidia/tuner_v1.h \
 	nccl-headers/nvidia/tuner_v2.h \
 	nccl-headers/neuron/net.h \
-	nccl-headers/neuron/error.h
+	nccl-headers/neuron/error.h \
+	contrib/uthash.h \
+	contrib/utlist.h \
+	nccl_ofi_ep_addr_map.h
