Introduce a memory registration cache for the net plugin
With user buffer registration capability, when a network plugin reports
support for regIsGlobal, NCCL does maintain a cache of registration
handles (originally registered with a loopback communicator). At the
time of a send, it still calls into the regMr hook of the network plugin
for the actual communicator that will be used for the data transfer (in
case the net plugin requires communicator-specific state for the
registration). With regIsGlobal guarantee, it is possible for NCCL to
reuse the handle it has cached, but it does not do that today. This
commit introduces a MR cache that is similar in design to NCCL's
internal cache (with a linear search in the cache to find a registration
that fully covers the list of pages of the buffer in question) to avoid
redundant (and expensive) registrations with the underlying device.

Signed-off-by: Raghu Raja <raghunch@amazon.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -18,6 +18,7 @@ noinst_HEADERS = \
 	nccl_ofi_memcheck_asan.h \
 	nccl_ofi_memcheck_nop.h \
 	nccl_ofi_memcheck_valgrind.h \
+	nccl_ofi_mr.h \
 	nccl_ofi_msgbuff.h \
 	nccl_ofi_param.h \
 	nccl_ofi_pthread.h \
