rdma, sendrecv: deactivate domain when closing inflight communicators
Closing a communicator that still has requests inflight will deactivate
the domain, preventing use of all other communicators on the domain for
anything except closing the communicator.

This is necessary because, when closing a communicator, the only way to
ensure user memory is no longer accessed is to close the corresponding
endpoint.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -65,8 +65,8 @@ else
   libinternal_net_cudart_plugin_la_CPPFLAGS += -isystem $(abs_top_srcdir)/3rd-party/nccl/$(DEVICE_INTERFACE)/include
   libinternal_net_cudart_plugin_la_CPPFLAGS += -isystem $(abs_top_srcdir)/3rd-party/uthash/include
   libinternal_net_cudart_plugin_la_CPPFLAGS += -I$(abs_top_srcdir)/include
-  libinternal_net_cudart_plugin_la_LDFLAGS = -whole-archive -static -avoid-version $(CUDA_LDFLAGS)
-  libinternal_net_cudart_plugin_la_LIBADD = $(CUDA_LIBS)
+  libinternal_net_cudart_plugin_la_LDFLAGS = -whole-archive -static -lstdc++ -avoid-version $(CUDA_LDFLAGS)
+  libinternal_net_cudart_plugin_la_LIBADD = $(CUDA_LIBS) -lstdc++
   libinternal_net_plugin_la_LIBADD = libinternal_net_cudart_plugin.la
   lib_LTLIBRARIES = libnccl-net-ofi.la
   libnccl_net_ofi_la_SOURCES =
