tests: Add functional test for reusing a listen comm
The new connection management code supports creating multiple send/recv
comms from a single listen comm. Since NCCL does not currently use this
functionality, add a functional test for it.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/tests/functional/Makefile.am
+++ b/tests/functional/Makefile.am
@@ -18,10 +18,11 @@ CXX = $(MPICXX)
 if ENABLE_FUNC_TESTS
 noinst_HEADERS = test-common.h
 
-bin_PROGRAMS = nccl_connection nccl_message_transfer ring inflight_close
+bin_PROGRAMS = nccl_connection nccl_message_transfer ring inflight_close reuse_listen_comm
 
 nccl_connection_SOURCES = nccl_connection.cpp
 nccl_message_transfer_SOURCES = nccl_message_transfer.cpp
 ring_SOURCES = ring.cpp
 inflight_close_SOURCES = inflight_close.cpp
+reuse_listen_comm_SOURCES = reuse_listen_comm.cpp
 endif
