Add GPU-Initiated Networking (GIN) API
This is an implementation of the GIN host proxy API for the OFI-NCCL
plugin. It is based on the GIN Early Access code from NCCL
(https://github.com/NVIDIA/nccl/pull/1845)

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,6 +36,13 @@ sources = \
 	nccl_ofi_platform.cpp \
 	tracepoint.cpp
 
+if ENABLE_GIN
+sources += \
+	gin/nccl_ofi_gin.cpp \
+	gin/nccl_ofi_gin_allgather.cpp \
+	gin/nccl_ofi_gin_api.cpp
+endif
+
 if WANT_PLATFORM_AWS
 sources += platform-aws.cpp
 endif
