Add GPU-Initiated Networking (GIN) API implementaiton
This is an implementation of the GIN host proxy API for the OFI-NCCL
plugin, based on the GIN API released in NCCL 2.28.7-1.

GIN is only enabled for CUDA builds, and can only be used with the RDMA
protocol. GDRCopy is required for GIN support.

Support for GIN API is currently experimental.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,6 +14,11 @@ sources = \
 	cm/nccl_ofi_cm.cpp \
 	cm/nccl_ofi_cm_resources.cpp \
 	cm/nccl_ofi_cm_reqs.cpp \
+  gin/nccl_ofi_gin_allgather.cpp \
+	gin/nccl_ofi_gin_api.cpp \
+	gin/nccl_ofi_gin_resources.cpp \
+	gin/nccl_ofi_gin_reqs.cpp \
+	gin/nccl_ofi_gin.cpp \
 	nccl_ofi_api.cpp \
 	nccl_ofi_assert.cpp \
 	nccl_ofi_compat.cpp \
