Add GPU-Initiated Networking (GIN) API implementaiton
This is an implementation of the GIN host proxy API for the OFI-NCCL
plugin, based on the GIN API released in NCCL 2.28.7-1.

GIN is only enabled for CUDA builds, and can only be used with the RDMA
protocol. GDRCopy is required for GIN support.

Support for GIN API is currently experimental.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -49,3 +49,11 @@ noinst_HEADERS = \
 	tuner/nccl_ofi_tuner_common.h \
 	tuner/nccl_ofi_tuner_region.h \
 	tuner/nccl_ofi_tuner_model.h
+
+if ENABLE_GIN
+noinst_HEADERS += \
+	gin/nccl_ofi_gin_reqs.h \
+	gin/nccl_ofi_gin_resources.h \
+	gin/nccl_ofi_gin_types.h \
+	gin/nccl_ofi_gin.h
+endif
