Add GDRCopy wrapper library using dlopen
GDRCopy will be required for the GIN plugin to support atomic update
(increment/add) of a signal variable in GPU memory. It will not be
required for the net plugin.

GDRCopy header will required at build-time. The shared library will be
dynamically loaded at run-time using `dlopen`.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/configure.ac
+++ b/configure.ac
@@ -154,6 +154,8 @@ CHECK_PKG_HWLOC([],
 AC_DEFINE_UNQUOTED([HAVE_CUDA], [${do_cuda}], [Defined to 1 if CUDA is available])
 AM_CONDITIONAL([HAVE_CUDA], [test ${do_cuda} = 1])
 
+CHECK_PKG_GDRCOPY()
+
 CHECK_PKG_VALGRIND()
 CHECK_VAR_REDZONE()
 
