--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ sources = \
 	nccl_ofi_api.cpp \
 	nccl_ofi_assert.cpp \
 	nccl_ofi_compat.cpp \
+	nccl_ofi_gdrcopy.cpp \
 	nccl_ofi_net.cpp \
 	nccl_ofi_sendrecv.cpp \
 	nccl_ofi_system.cpp \
