Add a new device copy API
This is a new generic interface for copies between host and device
memory. An implementation for CUDA copies (using GDRCopy) will be
supplied in the following commits.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -14,6 +14,7 @@ noinst_HEADERS = \
 	nccl_ofi_assert.h \
 	nccl_ofi_config_bottom.h \
 	nccl_ofi_cuda.h \
+	nccl_ofi_device_copy.h \
 	nccl_ofi_dmabuf.h \
 	nccl_ofi_environ.h \
 	nccl_ofi_ep_addr_list.h \
