Add GDRCopy library wrapper
This wrapper implements the device copy API. The GDRCopy shared library
is loaded at runtime. Construction of the wrapper library fails with an
exception if the GDRCopy library cannot be loaded.

This implementation will use the `FORCE_PCIE` mapping flag, if
supported, to force mappings to use PCIe instead of the C2C
interconnect.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -19,6 +19,7 @@ noinst_HEADERS = \
 	nccl_ofi_environ.h \
 	nccl_ofi_ep_addr_list.h \
 	nccl_ofi_freelist.h \
+	nccl_ofi_gdrcopy.h \
 	nccl_ofi_idpool.h \
 	nccl_ofi_log.h \
 	nccl_ofi_math.h \
