gin: Add stub API implementation for GIN
GPU-Initiated Networking (GIN) API was introduced in NCCL 2.28.7-1. This
stub API is implemented in subsequent commits.

Signed-off-by: Eric Raut <eraut@amazon.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -51,6 +51,8 @@ endif
 
 if HAVE_CUDA
 sources += nccl_ofi_cuda.cpp nccl_ofi_interface_nvidia.cpp
+sources += \
+	gin/nccl_ofi_gin_api.cpp
 endif
 
 # add the tuner sources into the library
